# cine-encoder

./: .gitignore  ABOUT  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md  appimage-builder.yml  cine-encoder.desktop  requirements.txt  setup.cfg  setup.py  stdeb.cfg
.github/: FUNDING.yml
GUI/: cine-encoder.desktop  main.spec
app/: .directory  CMakeLists.txt  about.cpp  about.h  about.ui  basedialog.cpp  basedialog.h  basewindow_cwm.cpp  basewindow_cwm.h  cine-encoder.desktop  cine_encoder.pro  cine_encoder.pro.user.0c72b7d  cine_encoder.pro.user.efb9c45  constants.h  dialog.cpp  dialog.h  dialog.ui  donate.cpp  donate.h  donate.ui  encoder.cpp  encoder.h  encoderstream.cpp  encoderstream.h  fileiconprovider.cpp  fileiconprovider.h  files.qrc  framelesswindow.cpp  framelesswindow.h  helper.cpp  helper.h  icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  message.ui  notification.cpp  (+39 more)
app/platform_unix/: basewindow.cpp  basewindow.h  xutil.cpp  xutil.h
app/platform_win/: basewindow.cpp  basewindow.h
app/resources/css/: style_0.css  style_1.css  style_2.css  style_3.css  style_4.css
app/resources/data/: default_presets.ini  default_presets.txt  default_presets.xml  default_settings.ini  default_settings.xml
app/resources/html/: about.html  donate.html
app/resources/translation/: translation_de.qm  translation_de.ts  translation_nl.qm  translation_nl.ts  translation_ru.qm  translation_ru.ts  translation_zh.qm  translation_zh.ts
app/widgets/: qanimatedsvg.cpp  qanimatedsvg.h  qdoublebutton.cpp  qdoublebutton.h  qstreamview.cpp  qstreamview.h  qstreamviewextern.cpp  qstreamviewextern.h
cine-encoder/: cine-encoder.desktop  files_rc.py  main.py  ui_about.py  ui_about.ui  ui_donate.py  ui_main.py  ui_main.ui  ui_taskcomplete.py
cine_encoder/: cine-encoder.desktop  files.qrc  main.py  ui_about.py  ui_about.ui  ui_donate.py  ui_donate.ui  ui_main.py  ui_main.ui  ui_taskcomplete.py  ui_taskcomplete.ui
cine_encoder_helg1980.egg-info/: PKG-INFO  SOURCES.txt
distros/archlinux/: PKGBUILD
distros/centos/: cine-encoder.spec
distros/debian/: changelog  cine-encoder.1  cine-encoder.install  cine-encoder.manpages  control  copyright  dirs  menu  rules  watch
distros/fedora/: cine-encoder.spec
distros/windows/: cine-encoder.iss
docs/: about.rst  build.rst  conf.py  download.rst  index.rst  installation.rst
docs/_build/doctrees/: about.doctree  build.doctree  download.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  readme.doctree  support.doctree
docs/_build/html/: .buildinfo  about.html  build.html  download.html  genindex.html  index.html  installation.html  license.html  objects.inv  readme.html  search.html  searchindex.js  support.html
docs/_build/html/_sources/: build.rst.txt  download.rst.txt  index.rst.txt  license.rst.txt  readme.rst.txt  support.rst.txt
docs/_build/html/_static/: bizstyle.js  theme_overrides.css
share/: ABOUT  cine-encoder.desktop
