cmake_minimum_required(VERSION 3.16)
project(cine_encoder VERSION 3.5.5 LANGUAGES C CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

# Set up AUTOMOC and some sensible defaults for runtime execution
# When using Qt 6.3, you can replace the code block below with
# qt_standard_project_setup()
set(CMAKE_AUTOMOC ON)
include(GNUInstallDirs)
set(CMAKE_AUTOUIC ON)

find_package(QT NAMES Qt5 REQUIRED COMPONENTS Core)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui Multimedia Svg)
find_package(Qt${QT_VERSION_MAJOR} OPTIONAL_COMPONENTS Widgets X11Extras)

add_executable(cine_encoder WIN32 MACOSX_BUNDLE
    basedialog.cpp basedialog.h
    constants.h
    encoder.cpp encoder.h
    encoderstream.cpp encoderstream.h
    fileiconprovider.cpp fileiconprovider.h
    helper.cpp helper.h
    main.cpp
    mainwindow.cpp mainwindow.h mainwindow.ui
    message.cpp message.h message.ui
    notification.cpp notification.h notification.ui
    popupmessage.cpp popupmessage.h popupmessage.ui
    preset.cpp preset.h preset.ui
    progress.cpp progress.h progress.ui
    report.cpp report.h report.ui
    settings.cpp settings.h settings.ui
    streamconverter.cpp streamconverter.h streamconverter.ui
    tables.h
    widgets/qanimatedsvg.cpp widgets/qanimatedsvg.h
    widgets/qdoublebutton.cpp widgets/qdoublebutton.h
    widgets/qstreamview.cpp widgets/qstreamview.h
)
target_link_libraries(cine_encoder PRIVATE
    Qt::Core
    Qt::Gui
    Qt::Multimedia
    Qt::Svg
)


# Resources:
set(files_resource_files
    "resources/css/style_0.css"
    "resources/css/style_1.css"
    "resources/css/style_2.css"
    "resources/css/style_3.css"
    "resources/css/style_4.css"
    "resources/data/default_presets.ini"
    "resources/data/default_settings.ini"
    "resources/html/about.html"
    "resources/html/donate.html"
    "resources/icons/12x12/cil-input.png"
    "resources/icons/12x12/cil-input_black.png"
    "resources/icons/12x12/cil-output.png"
    "resources/icons/12x12/cil-output_black.png"
    "resources/icons/16x16/cil-3d.png"
    "resources/icons/16x16/cil-4k.png"
    "resources/icons/16x16/cil-4k_black.png"
    "resources/icons/16x16/cil-account-logout.png"
    "resources/icons/16x16/cil-action-redo.png"
    "resources/icons/16x16/cil-action-undo.png"
    "resources/icons/16x16/cil-arrow-bottom.png"
    "resources/icons/16x16/cil-arrow-bottom_black.png"
    "resources/icons/16x16/cil-arrow-left-.png"
    "resources/icons/16x16/cil-arrow-left_black.png"
    "resources/icons/16x16/cil-arrow-right-.png"
    "resources/icons/16x16/cil-arrow-right_black.png"
    "resources/icons/16x16/cil-arrow-top.png"
    "resources/icons/16x16/cil-arrow-top_black.png"
    "resources/icons/16x16/cil-ban.png"
    "resources/icons/16x16/cil-calendar-check.png"
    "resources/icons/16x16/cil-camera-roll.png"
    "resources/icons/16x16/cil-camera-roll_black.png"
    "resources/icons/16x16/cil-camera.png"
    "resources/icons/16x16/cil-caret-bottom.png"
    "resources/icons/16x16/cil-caret-bottom_black.png"
    "resources/icons/16x16/cil-caret-left.png"
    "resources/icons/16x16/cil-caret-left_black.png"
    "resources/icons/16x16/cil-caret-right.png"
    "resources/icons/16x16/cil-caret-right_black.png"
    "resources/icons/16x16/cil-caret-top.png"
    "resources/icons/16x16/cil-caret-top_black.png"
    "resources/icons/16x16/cil-cart.png"
    "resources/icons/16x16/cil-chart-line.png"
    "resources/icons/16x16/cil-chart.png"
    "resources/icons/16x16/cil-check-alt.png"
    "resources/icons/16x16/cil-check-alt_black.png"
    "resources/icons/16x16/cil-check.png"
    "resources/icons/16x16/cil-chevron-bottom.png"
    "resources/icons/16x16/cil-chevron-double-down.png"
    "resources/icons/16x16/cil-chevron-double-left.png"
    "resources/icons/16x16/cil-chevron-double-right.png"
    "resources/icons/16x16/cil-chevron-double-up-alt.png"
    "resources/icons/16x16/cil-chevron-double-up.png"
    "resources/icons/16x16/cil-chevron-left.png"
    "resources/icons/16x16/cil-chevron-left_black.png"
    "resources/icons/16x16/cil-chevron-right.png"
    "resources/icons/16x16/cil-chevron-right_black.png"
    "resources/icons/16x16/cil-chevron-top.png"
    "resources/icons/16x16/cil-circle.png"
    "resources/icons/16x16/cil-clear-audio.png"
    "resources/icons/16x16/cil-clear-subt.png"
    "resources/icons/16x16/cil-clipboard.png"
    "resources/icons/16x16/cil-clock.png"
    "resources/icons/16x16/cil-clone.png"
    "resources/icons/16x16/cil-clone_black.png"
    "resources/icons/16x16/cil-cloud-download.png"
    "resources/icons/16x16/cil-cloud-upload.png"
    "resources/icons/16x16/cil-cloudy.png"
    "resources/icons/16x16/cil-coffee.png"
    "resources/icons/16x16/cil-comment-bubble.png"
    "resources/icons/16x16/cil-comment-square.png"
    "resources/icons/16x16/cil-cursor-center.png"
    "resources/icons/16x16/cil-cursor.png"
    "resources/icons/16x16/cil-cut.png"
    "resources/icons/16x16/cil-description.png"
    "resources/icons/16x16/cil-edit-pencil.png"
    "resources/icons/16x16/cil-equalizer.png"
    "resources/icons/16x16/cil-erase.png"
    "resources/icons/16x16/cil-ethernet.png"
    "resources/icons/16x16/cil-exit-to-app.png"
    "resources/icons/16x16/cil-expand-down.png"
    "resources/icons/16x16/cil-expand-left.png"
    "resources/icons/16x16/cil-expand-right.png"
    "resources/icons/16x16/cil-expand-up.png"
    "resources/icons/16x16/cil-exposure.png"
    "resources/icons/16x16/cil-external-link.png"
    "resources/icons/16x16/cil-file-add.png"
    "resources/icons/16x16/cil-file-delete.png"
    "resources/icons/16x16/cil-file.png"
    "resources/icons/16x16/cil-file_black.png"
    "resources/icons/16x16/cil-find-in-page.png"
    "resources/icons/16x16/cil-find.png"
    "resources/icons/16x16/cil-flag-reset.png"
    "resources/icons/16x16/cil-flip-to-back.png"
    "resources/icons/16x16/cil-folder-open.png"
    "resources/icons/16x16/cil-folder-open_light.png"
    "resources/icons/16x16/cil-folder.png"
    "resources/icons/16x16/cil-folder_light.png"
    "resources/icons/16x16/cil-forward.png"
    "resources/icons/16x16/cil-frame-left.png"
    "resources/icons/16x16/cil-frame-right.png"
    "resources/icons/16x16/cil-hd.png"
    "resources/icons/16x16/cil-hd_black.png"
    "resources/icons/16x16/cil-hdr.png"
    "resources/icons/16x16/cil-hdr_black.png"
    "resources/icons/16x16/cil-headphones.png"
    "resources/icons/16x16/cil-history.png"
    "resources/icons/16x16/cil-history_black.png"
    "resources/icons/16x16/cil-home.png"
    "resources/icons/16x16/cil-house.png"
    "resources/icons/16x16/cil-image-plus.png"
    "resources/icons/16x16/cil-image1.png"
    "resources/icons/16x16/cil-infinity.png"
    "resources/icons/16x16/cil-input.png"
    "resources/icons/16x16/cil-input_black.png"
    "resources/icons/16x16/cil-layers.png"
    "resources/icons/16x16/cil-layers_black.png"
    "resources/icons/16x16/cil-level-down.png"
    "resources/icons/16x16/cil-level-up.png"
    "resources/icons/16x16/cil-library-add.png"
    "resources/icons/16x16/cil-library.png"
    "resources/icons/16x16/cil-lightbulb.png"
    "resources/icons/16x16/cil-link-alt.png"
    "resources/icons/16x16/cil-link-broken.png"
    "resources/icons/16x16/cil-link.png"
    "resources/icons/16x16/cil-list-clear-1.png"
    "resources/icons/16x16/cil-list-clear.png"
    "resources/icons/16x16/cil-location-pin.png"
    "resources/icons/16x16/cil-lock-locked.png"
    "resources/icons/16x16/cil-lock-unlocked.png"
    "resources/icons/16x16/cil-loop-1.png"
    "resources/icons/16x16/cil-loop-circular.png"
    "resources/icons/16x16/cil-loop-circular_black.png"
    "resources/icons/16x16/cil-loop.png"
    "resources/icons/16x16/cil-low-vision.png"
    "resources/icons/16x16/cil-low-vision_black.png"
    "resources/icons/16x16/cil-magnifying-glass.png"
    "resources/icons/16x16/cil-magnifying-glass_black.png"
    "resources/icons/16x16/cil-media-pause.png"
    "resources/icons/16x16/cil-media-skip-backward.png"
    "resources/icons/16x16/cil-media-skip-forward.png"
    "resources/icons/16x16/cil-media-step-backward.png"
    "resources/icons/16x16/cil-media-step-forward.png"
    "resources/icons/16x16/cil-media-stop.png"
    "resources/icons/16x16/cil-media-stop_black.png"
    "resources/icons/16x16/cil-menu.png"
    "resources/icons/16x16/cil-microphone.png"
    "resources/icons/16x16/cil-minus.png"
    "resources/icons/16x16/cil-mobile.png"
    "resources/icons/16x16/cil-move.png"
    "resources/icons/16x16/cil-movie.png"
    "resources/icons/16x16/cil-mug-tea.png"
    "resources/icons/16x16/cil-mug.png"
    "resources/icons/16x16/cil-notes.png"
    "resources/icons/16x16/cil-null.png"
    "resources/icons/16x16/cil-options-horizontal.png"
    "resources/icons/16x16/cil-options-horizontal_black.png"
    "resources/icons/16x16/cil-options.png"
    "resources/icons/16x16/cil-output.png"
    "resources/icons/16x16/cil-output_black.png"
    "resources/icons/16x16/cil-paint-bucket.png"
    "resources/icons/16x16/cil-paper-plane.png"
    "resources/icons/16x16/cil-paperclip.png"
    "resources/icons/16x16/cil-paragraph.png"
    "resources/icons/16x16/cil-pause.png"
    "resources/icons/16x16/cil-pen-alt.png"
    "resources/icons/16x16/cil-pencil.png"
    "resources/icons/16x16/cil-people.png"
    "resources/icons/16x16/cil-pin.png"
    "resources/icons/16x16/cil-pin_black.png"
    "resources/icons/16x16/cil-play.png"
    "resources/icons/16x16/cil-plus.png"
    "resources/icons/16x16/cil-power-standby.png"
    "resources/icons/16x16/cil-primary-edit-add.png"
    "resources/icons/16x16/cil-primary-edit-minus.png"
    "resources/icons/16x16/cil-rectangle.png"
    "resources/icons/16x16/cil-reload.png"
    "resources/icons/16x16/cil-remove.png"
    "resources/icons/16x16/cil-reset.png"
    "resources/icons/16x16/cil-save.png"
    "resources/icons/16x16/cil-screen-desktop.png"
    "resources/icons/16x16/cil-screen-desktop_black.png"
    "resources/icons/16x16/cil-screen-smartphone.png"
    "resources/icons/16x16/cil-settings.png"
    "resources/icons/16x16/cil-settings_black.png"
    "resources/icons/16x16/cil-share-boxed.png"
    "resources/icons/16x16/cil-share.png"
    "resources/icons/16x16/cil-signal-cellular-0.png"
    "resources/icons/16x16/cil-signal-cellular-3.png"
    "resources/icons/16x16/cil-sort-ascending.png"
    "resources/icons/16x16/cil-sort-descending.png"
    "resources/icons/16x16/cil-speaker.png"
    "resources/icons/16x16/cil-speech.png"
    "resources/icons/16x16/cil-speedometer.png"
    "resources/icons/16x16/cil-star.png"
    "resources/icons/16x16/cil-tags.png"
    "resources/icons/16x16/cil-tags_black.png"
    "resources/icons/16x16/cil-task.png"
    "resources/icons/16x16/cil-terminal.png"
    "resources/icons/16x16/cil-text-size.png"
    "resources/icons/16x16/cil-text-square.png"
    "resources/icons/16x16/cil-text.png"
    "resources/icons/16x16/cil-transfer.png"
    "resources/icons/16x16/cil-triangle.png"
    "resources/icons/16x16/cil-undo.png"
    "resources/icons/16x16/cil-user-female.png"
    "resources/icons/16x16/cil-user-follow.png"
    "resources/icons/16x16/cil-user-unfollow.png"
    "resources/icons/16x16/cil-user.png"
    "resources/icons/16x16/cil-vertical-align-bottom.png"
    "resources/icons/16x16/cil-view-column.png"
    "resources/icons/16x16/cil-voice-over-record.png"
    "resources/icons/16x16/cil-volume-high.png"
    "resources/icons/16x16/cil-volume-low.png"
    "resources/icons/16x16/cil-volume-off.png"
    "resources/icons/16x16/cil-warning.png"
    "resources/icons/16x16/cil-window-minimize.png"
    "resources/icons/16x16/cil-window-minimize_black.png"
    "resources/icons/16x16/cil-window-restore.png"
    "resources/icons/16x16/cil-wrap-text.png"
    "resources/icons/16x16/cil-x-circle.png"
    "resources/icons/16x16/cil-x.png"
    "resources/icons/16x16/cil-x_black.png"
    "resources/icons/16x16/cil-zoom-in.png"
    "resources/icons/16x16/cil-zoom-in_black.png"
    "resources/icons/16x16/cil-zoom-out.png"
    "resources/icons/16x16/cil-zoom-out_black.png"
    "resources/icons/20x20/cil-arrow-bottom.png"
    "resources/icons/20x20/cil-arrow-bottom_black.png"
    "resources/icons/20x20/cil-arrow-right.png"
    "resources/icons/20x20/cil-arrow-right_black.png"
    "resources/icons/20x20/cil-arrow-top.png"
    "resources/icons/20x20/cil-arrow-top_black.png"
    "resources/icons/20x20/cil-cursor-center.png"
    "resources/icons/20x20/cil-input.png"
    "resources/icons/20x20/cil-input_black.png"
    "resources/icons/20x20/cil-output.png"
    "resources/icons/20x20/cil-output_black.png"
    "resources/icons/20x20/cil-screen-desktop.png"
    "resources/icons/20x20/cil-screen-desktop_black.png"
    "resources/icons/20x20/cil-settings.png"
    "resources/icons/20x20/cil-settings_black.png"
    "resources/icons/20x20/cil-tags.png"
    "resources/icons/20x20/cil-tags_black.png"
    "resources/icons/24x24/cil-arrow-bottom.png"
    "resources/icons/24x24/cil-arrow-bottom_black.png"
    "resources/icons/24x24/cil-arrow-right.png"
    "resources/icons/24x24/cil-arrow-right_black.png"
    "resources/icons/24x24/cil-arrow-top.png"
    "resources/icons/24x24/cil-arrow-top_black.png"
    "resources/icons/24x24/cil-cursor-center.png"
    "resources/icons/24x24/cil-input.png"
    "resources/icons/24x24/cil-input_black.png"
    "resources/icons/24x24/cil-output.png"
    "resources/icons/24x24/cil-output_black.png"
    "resources/icons/24x24/cil-screen-desktop.png"
    "resources/icons/24x24/cil-screen-desktop_black.png"
    "resources/icons/24x24/cil-settings.png"
    "resources/icons/24x24/cil-settings_black.png"
    "resources/icons/24x24/cil-tags.png"
    "resources/icons/24x24/cil-tags_black.png"
    "resources/icons/32x32/cil-3d.png"
    "resources/icons/32x32/cil-4k.png"
    "resources/icons/32x32/cil-airplay.png"
    "resources/icons/32x32/cil-arrow-bottom.png"
    "resources/icons/32x32/cil-arrow-bottom_black.png"
    "resources/icons/32x32/cil-arrow-right.png"
    "resources/icons/32x32/cil-arrow-right_black.png"
    "resources/icons/32x32/cil-arrow-top.png"
    "resources/icons/32x32/cil-arrow-top_black.png"
    "resources/icons/32x32/cil-camera-roll.png"
    "resources/icons/32x32/cil-camera.png"
    "resources/icons/32x32/cil-chart-line.png"
    "resources/icons/32x32/cil-check-alt.png"
    "resources/icons/32x32/cil-check.png"
    "resources/icons/32x32/cil-chevron-bottom.png"
    "resources/icons/32x32/cil-chevron-double-up-alt.png"
    "resources/icons/32x32/cil-comment-bubble.png"
    "resources/icons/32x32/cil-comment-square.png"
    "resources/icons/32x32/cil-copy.png"
    "resources/icons/32x32/cil-cursor-center.png"
    "resources/icons/32x32/cil-cursor.png"
    "resources/icons/32x32/cil-description.png"
    "resources/icons/32x32/cil-equalizer.png"
    "resources/icons/32x32/cil-exit-to-app.png"
    "resources/icons/32x32/cil-exposure.png"
    "resources/icons/32x32/cil-file.png"
    "resources/icons/32x32/cil-folder-open.png"
    "resources/icons/32x32/cil-folder.png"
    "resources/icons/32x32/cil-fullscreen-exit.png"
    "resources/icons/32x32/cil-fullscreen.png"
    "resources/icons/32x32/cil-headphones.png"
    "resources/icons/32x32/cil-home.png"
    "resources/icons/32x32/cil-https.png"
    "resources/icons/32x32/cil-image-plus.png"
    "resources/icons/32x32/cil-image1.png"
    "resources/icons/32x32/cil-infinity.png"
    "resources/icons/32x32/cil-input.png"
    "resources/icons/32x32/cil-input_black.png"
    "resources/icons/32x32/cil-layers.png"
    "resources/icons/32x32/cil-layers_black.png"
    "resources/icons/32x32/cil-library-add.png"
    "resources/icons/32x32/cil-library.png"
    "resources/icons/32x32/cil-lightbulb.png"
    "resources/icons/32x32/cil-link-alt.png"
    "resources/icons/32x32/cil-link-broken.png"
    "resources/icons/32x32/cil-link.png"
    "resources/icons/32x32/cil-list.png"
    "resources/icons/32x32/cil-lock-locked.png"
    "resources/icons/32x32/cil-lock-unlocked.png"
    "resources/icons/32x32/cil-loop-circular.png"
    "resources/icons/32x32/cil-loop.png"
    "resources/icons/32x32/cil-media-eject.png"
    "resources/icons/32x32/cil-media-pause.png"
    "resources/icons/32x32/cil-media-play.png"
    "resources/icons/32x32/cil-media-record.png"
    "resources/icons/32x32/cil-media-skip-backward.png"
    "resources/icons/32x32/cil-media-skip-forward.png"
    "resources/icons/32x32/cil-media-step-backward.png"
    "resources/icons/32x32/cil-media-step-forward.png"
    "resources/icons/32x32/cil-media-stop.png"
    "resources/icons/32x32/cil-menu.png"
    "resources/icons/32x32/cil-microphone.png"
    "resources/icons/32x32/cil-minus.png"
    "resources/icons/32x32/cil-mobile.png"
    "resources/icons/32x32/cil-movie.png"
    "resources/icons/32x32/cil-mug-tea.png"
    "resources/icons/32x32/cil-notes.png"
    "resources/icons/32x32/cil-object-ungroup.png"
    "resources/icons/32x32/cil-options-horizontal.png"
    "resources/icons/32x32/cil-options.png"
    "resources/icons/32x32/cil-output.png"
    "resources/icons/32x32/cil-output_black.png"
    "resources/icons/32x32/cil-paper-plane.png"
    "resources/icons/32x32/cil-paperclip.png"
    "resources/icons/32x32/cil-pencil.png"
    "resources/icons/32x32/cil-people.png"
    "resources/icons/32x32/cil-pin.png"
    "resources/icons/32x32/cil-plus.png"
    "resources/icons/32x32/cil-power-standby.png"
    "resources/icons/32x32/cil-reload.png"
    "resources/icons/32x32/cil-remove.png"
    "resources/icons/32x32/cil-satelite.png"
    "resources/icons/32x32/cil-save.png"
    "resources/icons/32x32/cil-screen-desktop.png"
    "resources/icons/32x32/cil-screen-desktop_black.png"
    "resources/icons/32x32/cil-settings.png"
    "resources/icons/32x32/cil-settings_black.png"
    "resources/icons/32x32/cil-speech.png"
    "resources/icons/32x32/cil-star.png"
    "resources/icons/32x32/cil-swap-horizontal.png"
    "resources/icons/32x32/cil-swap-vertical.png"
    "resources/icons/32x32/cil-tags.png"
    "resources/icons/32x32/cil-tags_black.png"
    "resources/icons/32x32/cil-task.png"
    "resources/icons/32x32/cil-transfer.png"
    "resources/icons/32x32/cil-user-female.png"
    "resources/icons/32x32/cil-user-follow.png"
    "resources/icons/32x32/cil-user-unfollow.png"
    "resources/icons/32x32/cil-user.png"
    "resources/icons/32x32/cil-voice-over-record.png"
    "resources/icons/32x32/cil-volume-high.png"
    "resources/icons/32x32/cil-volume-low.png"
    "resources/icons/32x32/cil-volume-off.png"
    "resources/icons/32x32/cil-wallet.png"
    "resources/icons/32x32/cil-wallpaper.png"
    "resources/icons/32x32/cil-window-minimize.png"
    "resources/icons/32x32/cil-window-restore.png"
    "resources/icons/32x32/cil-x.png"
    "resources/icons/32x32/cil-zoom-in.png"
    "resources/icons/32x32/cil-zoom-out.png"
    "resources/icons/64x64/cine-encoder.png"
    "resources/icons/gif/cil-spinner-circle.gif"
    "resources/icons/svg/add.svg"
    "resources/icons/svg/add_file.svg"
    "resources/icons/svg/adjoins.svg"
    "resources/icons/svg/broomstick.svg"
    "resources/icons/svg/check.svg"
    "resources/icons/svg/cine-encoder.svg"
    "resources/icons/svg/close.svg"
    "resources/icons/svg/close_black.svg"
    "resources/icons/svg/computer.svg"
    "resources/icons/svg/desktop.svg"
    "resources/icons/svg/drive.svg"
    "resources/icons/svg/error.svg"
    "resources/icons/svg/expand.svg"
    "resources/icons/svg/expand_black.svg"
    "resources/icons/svg/file.svg"
    "resources/icons/svg/folder.svg"
    "resources/icons/svg/folder_light.svg"
    "resources/icons/svg/folder_open.svg"
    "resources/icons/svg/folder_open_light.svg"
    "resources/icons/svg/forward.svg"
    "resources/icons/svg/frame-bottom.svg"
    "resources/icons/svg/frame-bottom_black.svg"
    "resources/icons/svg/frame-left.svg"
    "resources/icons/svg/frame-left_black.svg"
    "resources/icons/svg/frame-right.svg"
    "resources/icons/svg/frame-right_black.svg"
    "resources/icons/svg/frame-top.svg"
    "resources/icons/svg/frame-top_black.svg"
    "resources/icons/svg/haschild.svg"
    "resources/icons/svg/history.svg"
    "resources/icons/svg/info.svg"
    "resources/icons/svg/left.svg"
    "resources/icons/svg/minimize.svg"
    "resources/icons/svg/minimize_black.svg"
    "resources/icons/svg/network.svg"
    "resources/icons/svg/no_preview.svg"
    "resources/icons/svg/not_shortest.svg"
    "resources/icons/svg/order-history.svg"
    "resources/icons/svg/order-history_white.svg"
    "resources/icons/svg/pause.svg"
    "resources/icons/svg/pencil.svg"
    "resources/icons/svg/play.svg"
    "resources/icons/svg/popup.svg"
    "resources/icons/svg/previous.svg"
    "resources/icons/svg/remove.svg"
    "resources/icons/svg/remove_file.svg"
    "resources/icons/svg/reset.svg"
    "resources/icons/svg/restore.svg"
    "resources/icons/svg/restore_black.svg"
    "resources/icons/svg/right.svg"
    "resources/icons/svg/shortest.svg"
    "resources/icons/svg/sort_down.svg"
    "resources/icons/svg/sort_up.svg"
    "resources/icons/svg/spinner.svg"
    "resources/icons/svg/spinner_black.svg"
    "resources/icons/svg/stop.svg"
    "resources/icons/svg/sys_folder.svg"
    "resources/icons/svg/uncheck.svg"
    "resources/icons/svg/undo.svg"
    "resources/icons/svg/undo_history.svg"
    "resources/icons/svg/up.svg"
    "resources/icons/svg/view_icons.svg"
    "resources/icons/svg/view_list.svg"
    "resources/icons/svg/vline.svg"
    "resources/icons/svg/warning.svg"
    "resources/images/no_preview.png"
    "resources/images/splash.png"
    "resources/translation/translation_de.qm"
    "resources/translation/translation_ru.qm"
    "resources/translation/translation_zh.qm"
)

qt_add_resources(cine_encoder ${files_resource_files}
)

if((QT_VERSION_MAJOR GREATER 4))
    target_link_libraries(cine_encoder PRIVATE
        Qt::Widgets
    )
endif()

if(DEFINES___contains___WM_CUSTOM)
    target_sources(cine_encoder PUBLIC
        basewindow_cwm.cpp basewindow_cwm.h
    )
endif()

if(UNIX AND NOT DEFINES___contains___WM_CUSTOM AND NOT MACOS)
    target_sources(cine_encoder PUBLIC
        platform_unix/basewindow.cpp platform_unix/basewindow.h
        platform_unix/xutil.cpp platform_unix/xutil.h
    )
endif()

if(WIN32 AND NOT DEFINES___contains___WM_CUSTOM)
    target_sources(cine_encoder PUBLIC
        platform_win/basewindow.cpp platform_win/basewindow.h
    )
endif()

if(WIN32)
    target_link_libraries(cine_encoder PRIVATE
        dwmapi
        user32
    )
endif()

if(UNIX AND NOT MACOS)
    target_link_libraries(cine_encoder PRIVATE
        Qt::X11Extras
        X11
        Xext
        mediainfo
    )
endif()

install(TARGETS cine_encoder
    BUNDLE DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

# Consider using qt_generate_deploy_app_script() for app deployment if
# the project can use Qt 6.3. In that case rerun qmake2cmake with
# --min-qt-version=6.3.
